--- a/CSS/media.css
+++ b/CSS/media.css
@@ -3,6 +3,34 @@
         display: none;
     }
     .header_h1{
-        margin: 1% 0% 0% 5%
+        margin: 1% 0% 0% 0%
     }   
+}
+@media screen and (max-width: 750px){
+    html{
+        font-size: 7px;
+    }
+}
+@media screen and (max-width: 525px){
+    html{
+        font-size: 5px;
+    }
+}
+@media screen and (max-width: 400px){
+    html{
+        font-size: 5px;
+    }
+    .header{
+        top: -13px;
+    }
+    .header_h1{
+        padding: 7% 0px 7rem 0px
+    }
+    .navbar{
+        display: none;
+    }
+    .navbar_logo{
+        display: none;
+        
+    }
 }
