--- a/CSS/style.sass
+++ b/CSS/style.sass
@@ -3,6 +3,7 @@ html
     font-family: Poppins
 body
     margin: 0
+    padding: 0
 p
     margin: 0
 h1
@@ -12,6 +13,7 @@ h1
     height: 105vh
     background: no-repeat center url(../IMG/banner.png) 
     background-size: auto 105vh
+    position: relative
 .navbar
     width: 100%
     background-color: #ed242e
@@ -58,7 +60,8 @@ h1
     line-height: 10rem
     font-weight: bold
     color: #fff
-    padding: 3% 0px 70px 0px
+    padding: 3% 0px 7rem 0px
+    left: -4rem
 .header_button
     background-color: #fff
     width: 20rem
