--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,6 +30,7 @@ h1 {
   height: 8.7rem;
   display: flex;
   justify-content: space-between-;
+  box-sizing: border-box;
 }
 .navbar_lateral {
   width: 9rem;
@@ -70,6 +71,9 @@ h1 {
   width: 15.8rem;
   height: 100%;
 }
+.navbar_logo img {
+  margin: 0 auto;
+}
 
 .header_content {
   margin: 3% 0% 0% 7%;
@@ -102,4 +106,55 @@ h1 {
 .header_button:hover {
   background-color: #ed242e;
   color: #fff;
+}
+
+.navbar_input {
+  display: none;
+  background: rgba(255, 255, 255, 0);
+  width: 0px;
+  height: 0px;
+}
+.navbar_input::after {
+  transition: 0.5s;
+  content: "";
+  position: fixed;
+  background: url(../IMG/menu-burger-horizontal-svgrepo-com.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  top: 10px;
+  left: 75%;
+  width: 50px;
+  height: 45px;
+  border-radius: 10px;
+  border: 4.5px solid #fff;
+  z-index: 100;
+}
+.navbar_media {
+  width: 532px;
+  height: 359px;
+  background: #ed242e;
+  position: fixed;
+  top: 70px;
+  left: 40%;
+  box-sizing: border-box;
+  display: none;
+  box-shadow: 0px 0px 25px -9px rgb(255, 255, 255);
+  transition: 0.3s;
+}
+.navbar_media_a {
+  transition: 0.3s;
+  margin: 0px;
+  font-size: 17px;
+  width: auto;
+  justify-content: left;
+  color: white;
+  height: 56px;
+  padding: 25px 25px 0px 50px;
+  text-decoration: none;
+}
+
+.navbar_input:checked + .navbar_media {
+  transition: 0.3s;
+  display: block;
 }/*# sourceMappingURL=style.css.map */
