--- a/CSS/style.css
+++ b/CSS/style.css
@@ -214,7 +214,7 @@ h1, h2, h3 {
   max-width: 275px;
   text-align: center;
   display: inline-block;
-  transition: ease-in all 0.5s;
+  transition: ease-out all 0.4s;
   font-weight: bold;
   height: 7.5rem;
   line-height: 7.5rem;
