--- a/CSS/style.sass
+++ b/CSS/style.sass
@@ -136,6 +136,7 @@ h1, h2, h3
 .navbar_input:checked + .navbar_media
     transition: .3s
     display: block
+    z-index: 1000
 
 .about_virus
     margin: 0 auto
