--- a/CSS/style.css
+++ b/CSS/style.css
@@ -158,6 +158,7 @@ h1, h2, h3 {
 .navbar_input:checked + .navbar_media {
   transition: 0.3s;
   display: block;
+  z-index: 1000;
 }
 
 .about_virus {
