--- a/CSS/style.sass
+++ b/CSS/style.sass
@@ -1,10 +1,11 @@
 html
     font-size: 10px
     font-family: Poppins
+    width: 100vw
 body
     margin: 0
     padding: 0
-    background: #f4f4f4
+    background: #f0f0f0
 p
     margin: 0
 h1, h2, h3
@@ -61,7 +62,7 @@ h1, h2, h3
     margin: 3% 0% 0% 7%
     
 .header_h1
-    font-size: 5rem
+    font-size: 4.3rem
     line-height: 10rem
     font-weight: bold
     color: #fff
@@ -131,18 +132,29 @@ h1, h2, h3
         text-decoration: none
 
 .navbar_input:checked   
-
-
+.navbar_input
+    font-size: 24px
+    font-weight: 600
+    color: #fff
+.navbar_bg
+    position: fixed
+    margin: 0 auto
+.navbar_bg_text{
+    display: none
+    color: white
+    font-size: 16px
+    position: fixed
+}
 .navbar_input:checked + .navbar_media
     transition: .3s
     display: block
     z-index: 1000
-
+    
 .about_virus
     margin: 0 auto
     width: 80%
     height: auto
-    background: #fff
+    background: #ffffff
     padding: 80px 50px
     border-radius: 60px
     top: -110px
@@ -151,6 +163,7 @@ h1, h2, h3
     justify-content: center
     display: flex
     flex-wrap: wrap
+    box-sizing: border-box
     
     &_line
         position: absolute
@@ -197,3 +210,30 @@ h1, h2, h3
     text-decoration: none
     &:hover
         background-color: #ed1c24
+
+
+.corona_is
+    width: 100%
+    background: #ff000000
+    justify-content: center
+    top: 0px
+    left: 0px
+    box-sizing: border-box
+    padding: 0px 0px 50px 50px
+    
+.corona_is_img 
+    width: 56rem
+    position: relative
+    top:0px 
+    left: -10px
+    justify-content: center
+    box-sizing: border-box
+.corona_is_img img
+    width: 56rem
+    margin: 0px auto
+.corona_is_right 
+    h2
+        font-size: 4.5rem
+    p
+        padding: 35px 0px 50px 0px 
+        line-height: 3rem
