--- a/CSS/media.css
+++ b/CSS/media.css
@@ -14,6 +14,20 @@
     .header_h1{
         margin: 1% 0% 0% 0%
     }   
+    .about_virus{
+        top: -300px;
+    }
+    .corona_is img{
+        padding: 100px 0px 50px 0px
+    }
+    .corona_is_right h2{
+        line-height: 3.7rem;
+    }
+    .corona_is_img{
+        justify-content: center;
+        top: 0px;
+        left: 15px;
+    }
 }
 @media screen and (max-width: 750px){
     html{
@@ -24,6 +38,25 @@
     }
     .about_virus_left{
         justify-content: left;
+    }
+    .corona_is_right{
+        justify-content: center;
+        text-align: center;
+    }
+    .corona_is_right p{
+        width: 392px;
+        margin: 0 auto;
+    }
+    .header_button{
+        width: 300px;
+        height: 20rem;
+    }
+    .corona_is_img{
+        top: 0px;
+        left: 0px;
+    }
+    .corona_is_right p{
+        padding: 15px 0px 10px 0px;
     }
 }
 @media screen and (max-width: 525px){
@@ -36,14 +69,20 @@
     .header_div{
         position: absolute;
     }
-    .navbar_logo{
+    .header_content{
+        top: 150px;
         position: relative;
-        top: 0px;
+    }
+    .navbar_logo{
+        position: fixed;
+        top: 60px;
         content: "CORONA";
         left: -130px;
+        z-index: 100;
     }
     .navbar_input{
         display: block;
+
     }
     .navbar{
         display: none;
@@ -52,11 +91,47 @@
         width: 100vw;
         height: 87px;
         background-color:#ed242e;
+        z-index: 100;
+    }
+    .navbar_bg_text{
+        width: 150px;
+        padding: 10px;
+        display: block;
+        position: fixed;
+        top: 1%;
+        left: 5%;
+        z-index: 1000;
+        font-size: 24px;
+        font-weight: 600;
+        color: #fff;
+        text-decoration: none;
+        margin: 0 auto;
+    }
+    .navbar_logo img{
+        display: none;
+    }
+    .navbar_logo::after{
+        content: "CORONA";
+        font-size: 22px;
+        font-weight: 600;
+        color: #fff;
+        z-index: 10000;
+        top: 30px;
+        left: -50px;
+        position: fixed;
+        background-image: url(../IMG/logo.png);
+        background-size: 50%;
+        text-align: center;
+        background-position: top 20px right 75px;
+        width: 300px;
+        height: 300px;
+        background-repeat: no-repeat;
     }
     .about_virus{
-        top: -400px;
+        top: -300px;
         left: 0px;
         width: 75%;
+        border-radius: 20px;
     }
     .about_virus_right{
         width: 300px;
@@ -67,7 +142,19 @@
     .about_virus_left p{
         width: 300px;
     }
-        
+    .about_virus_left h2{
+        font-size: 30px;
+        line-height: 30px;
+        margin: 0px 0px 0px 10px;
+    }
+    .about_virus_line{
+        margin: 5px 0px 0px 10px;
+    }
+    .corona_is{
+        margin: 0 auto;
+        top: -3s30px;
+        left: -20px;
+    }
 }
 @media screen and (max-width: 400px){
     html{
@@ -83,8 +170,11 @@
     .navbar{
         display: none;
     }
-    .about_virus_right{
-        width: 200px;
+    .about_virus{
+        padding: 50px 30px 50px 30px;
+    }
+    .about_virus_left h2{
+        font-size: 30px;
     }
     .about_virus_right img{
         width: 200px;
@@ -92,5 +182,31 @@
     .about_virus_left p{
         width: 200px;
     }
+    .corona_is{
+        width: 80%;
+        position: relative;
+        top: -300px;
+        left: 0px;
+    }
+    .corona_is_right h2{
+        line-height: 30px;
+        margin: 0 auto;
+    }
+    .corons_is_img{
+        width: 200px;
+        justify-content: center;
+        margin: 0 auto;
+        top: 0px;
+        left: 0px;
+    }
+    .corons_is_img img{
+        width: 100%;
+    }
+    .corona_is{
+        margin: 0 auto;
+        top: -330px;
+        left: -20px;
+    }
+    
 }
        
