--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,7 +22,7 @@ h1, h2, h3 {
   width: 100%;
   height: 105vh;
   background: no-repeat center url(../IMG/banner.png);
-  background-size: auto 105vh;
+  background-size: 100% 105vh;
   position: relative;
 }
 
@@ -72,6 +72,9 @@ h1, h2, h3 {
   margin: -3rem auto;
   width: 15.8rem;
   height: 100%;
+  font-size: 24px;
+  font-weight: 600;
+  color: #fff;
 }
 .navbar_logo img {
   margin: 0 auto;
@@ -157,6 +160,14 @@ h1, h2, h3 {
 }
 
 .navbar_bg {
+  position: fixed;
+  margin: 0 auto;
+}
+
+.navbar_bg_text {
+  display: none;
+  color: white;
+  font-size: 16px;
   position: fixed;
 }
 
@@ -262,4 +273,121 @@ h1, h2, h3 {
 .corona_is_right p {
   padding: 35px 0px 50px 0px;
   line-height: 3rem;
+}
+
+.how_protect {
+  width: 100%;
+  font-family: Poppins;
+  justify-content: center;
+}
+.how_protect_h2 {
+  font-size: 45px;
+  margin: 0 auto;
+  width: 65rem;
+  text-align: center;
+  color: #353d47;
+}
+.how_protect p {
+  text-align: center;
+  width: 100%;
+  padding-bottom: 60px;
+  font-size: 15px;
+  color: #666666;
+}
+.how_protect_content {
+  width: 90%;
+  padding: 80px 0px 48px 0px;
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+}
+.how_protect_carg {
+  width: 31.3%;
+  margin: 1%;
+  display: flex;
+}
+
+.subscribe {
+  width: 100%;
+  height: 90rem;
+}
+.subscribe_top {
+  background-image: url(/IMG/subscribe_logo.png);
+  background-repeat: no-repeat;
+  background-size: 12rem;
+  background-position-x: 3rem;
+  height: 12rem;
+  margin: 10px 0px;
+}
+.subscribe_top h2 {
+  text-align: center;
+  padding: 5rem 0rem;
+  font-size: 3.3rem;
+  line-height: 4rem;
+  margin: 0;
+  color: #666666;
+}
+.subscribe_bottom {
+  width: 100%;
+  height: 200px;
+  padding: 5rem 0rem;
+  background-image: url(/IMG/subscribe_bg.jpg);
+}
+.subscribe_bottom input {
+  width: 80%;
+  height: 8rem;
+  background-color: transparent;
+  border: #fff solid 1px;
+  border-radius: 30px;
+  margin: 0 auto;
+  color: white;
+  padding: 10px;
+  font-size: 2rem;
+  font-family: "Poppins";
+  font-weight: 300;
+  display: block;
+}
+.subscribe_bottom a {
+  padding: 0.2rem 2rem;
+  border-radius: 50px;
+  margin: 20px auto;
+  display: block;
+}
+
+.footer {
+  width: 100%;
+  background-color: #111111;
+  padding: 8rem 0rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.footer_block {
+  padding: 0px 1.5rem;
+  height: 100%;
+  width: 35%;
+  margin-top: 20px;
+}
+.footer_block h3 {
+  color: white;
+  font-size: 2rem;
+}
+.footer_block a {
+  color: #979793;
+  font-size: 1.7rem;
+  text-decoration: none;
+  display: block;
+}
+.footer_block a:hover {
+  color: red;
+  transition: 0.5s;
+}
+.footer_block p {
+  color: white;
+  margin-bottom: 1.5rem;
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+.footer_block_1 {
+  width: 20%;
 }/*# sourceMappingURL=style.css.map */
