--- a/CSS/style.sass
+++ b/CSS/style.sass
@@ -270,7 +270,7 @@ h1, h2, h3
     width: 100%
     height: 90rem
     &_top
-        background-image: url(/IMG/subscribe_logo.png)
+        background-image: url(../IMG/subscribe_logo.png)
         background-repeat: no-repeat
         background-size: 12rem
         background-position-x: 3rem
@@ -287,7 +287,7 @@ h1, h2, h3
         width: 100%
         height: 200px
         padding: 5rem 0rem
-        background-image: url(/IMG/subscribe_bg.jpg)
+        background-image: url(../IMG/subscribe_bg.jpg)
         input
             width: 80%
             height: 8rem
