--- a/CSS/style.css
+++ b/CSS/style.css
@@ -312,7 +312,7 @@ h1, h2, h3 {
   height: 90rem;
 }
 .subscribe_top {
-  background-image: url(/IMG/subscribe_logo.png);
+  background-image: url(../IMG/subscribe_logo.png);
   background-repeat: no-repeat;
   background-size: 12rem;
   background-position-x: 3rem;
@@ -331,7 +331,7 @@ h1, h2, h3 {
   width: 100%;
   height: 200px;
   padding: 5rem 0rem;
-  background-image: url(/IMG/subscribe_bg.jpg);
+  background-image: url(../IMG/subscribe_bg.jpg);
 }
 .subscribe_bottom input {
   width: 80%;
